<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/mint"
    tools:context=".RegisterNewUserActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/registerUserToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/military"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/list_it_logo" />

    <EditText
        android:id="@+id/registerEmailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/e_mail"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/military"
        android:background="@drawable/login_input"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/registerPasswordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/military"
        android:background="@drawable/login_input"
        android:drawableStart="@drawable/ic_password_lock"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/confirmPasswordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/military"
        android:background="@drawable/login_input"
        android:drawableStart="@drawable/ic_password_lock"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/registerNewUserButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_account"
        android:textAllCaps="true"
        android:layout_margin="10dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"/>

    <TextView
        android:id="@+id/alreadyAUserTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/already_a_user"
        android:fontFamily="sans-serif"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="10dp"/>

</LinearLayout>