<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:background="@color/mint">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/loginToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/military"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/list_it_logo" />

    <EditText
        android:id="@+id/loginEmailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/e_mail"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/military"
        android:background="@drawable/login_input"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/loginPasswordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/military"
        android:background="@drawable/login_input"
        android:drawableStart="@drawable/ic_password_lock"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textAllCaps="true"
        android:layout_margin="10dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"/>

    <TextView
        android:id="@+id/registerNewUserTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_new_account"
        android:fontFamily="sans-serif"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="10dp"/>


</LinearLayout>